# gst-editing-services

./: .arcconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  RELEASE  autogen.sh  config.h.meson  configure.ac  gstreamer-editing-services-1.5.90.tar.xz  logs  meson.build  meson_options.txt  raw.txt  temp
data/: ges-launch-1.0
docs/: gst_plugins_cache.json  meson.build  sitemap.txt  version.entities.in
docs/design/: linking.notes  metadata.txt
docs/ges/: Makefile.am  hotdoc.json  tags
docs/ges/html/: doc_dependencies.p
docs/ges/html/c/: An high level overview of the various componenents of GES.html  Assets.html  Base Classes.html  Convenience classes.html  Enum and flag types.html  GESAsset.html  GESAudioSource.html  GESAudioTestSource.html  GESAudioTrack.html  GESAudioTransition.html  GESAudioUriSource.html  GESBaseEffect.html  GESBaseEffectClip.html  GESBaseTransitionClip.html  GESBaseXmlFormatter.html  GESClip.html  GESClipAsset.html  GESContainer.html  GESEffect.html  GESEffectClip.html  GESExtractableInterface.html  GESFormatter.html  GESGroup.html  GESImageSource.html  GESLayer.html  GESMetaContainer.html  GESMultiFileSource.html  GESOperation.html  GESOperationClip.html  GESOverlayClip.html  GESPipeline.html  GESPitiviFormatter.html  GESProject.html  GESSource.html  GESSourceClip.html  GESTestClip.html  GESTextOverlay.html  GESTextOverlayClip.html  GESTimeline.html  GESTimelineElement.html  (+35 more)
docs/ges/html/javascript/: An high level overview of the various componenents of GES.html  Assets.html  Base Classes.html  Convenience classes.html  Enum and flag types.html  GESAsset.html  GESAudioSource.html  GESAudioTestSource.html  GESAudioTrack.html  GESAudioTransition.html  GESAudioUriSource.html  GESBaseEffect.html  GESBaseEffectClip.html  GESBaseTransitionClip.html  GESBaseXmlFormatter.html  GESClip.html  GESClipAsset.html  GESContainer.html  GESEffect.html  GESEffectClip.html  GESExtractableInterface.html  GESFormatter.html  GESGroup.html  GESImageSource.html  GESLayer.html  GESMetaContainer.html  GESMultiFileSource.html  GESOperation.html  GESOperationClip.html  GESOverlayClip.html  GESPipeline.html  GESPitiviFormatter.html  GESProject.html  GESSource.html  GESSourceClip.html  GESTestClip.html  GESTextOverlay.html  GESTextOverlayClip.html  GESTimeline.html  GESTimelineElement.html  (+30 more)
docs/ges/html/python/: An high level overview of the various componenents of GES.html  Assets.html  Base Classes.html  Convenience classes.html  Enum and flag types.html  GESAsset.html  GESAudioSource.html  GESAudioTestSource.html  GESAudioTrack.html  GESAudioTransition.html  GESAudioUriSource.html  GESBaseEffect.html  GESBaseEffectClip.html  GESBaseTransitionClip.html  GESBaseXmlFormatter.html  GESClip.html  GESClipAsset.html  GESContainer.html  GESEffect.html  GESEffectClip.html  GESExtractableInterface.html  GESFormatter.html  GESGroup.html  GESImageSource.html  GESLayer.html  GESMetaContainer.html  GESMultiFileSource.html  GESOperation.html  GESOperationClip.html  GESOverlayClip.html  GESPipeline.html  GESPitiviFormatter.html  GESProject.html  GESSource.html  GESSourceClip.html  GESTestClip.html  GESTextOverlay.html  GESTextOverlayClip.html  GESTimeline.html  GESTimelineElement.html  (+30 more)
docs/ges/markdown/: Assets.markdown  Base_Classes.markdown  GESAsset.markdown  GES_Enums.markdown  GES_GErrors.markdown  GStreamer_Editing_Services_Overview.markdown  Timeline_objects.markdown  Track_objects.markdown  architecture.markdown  ges-launch.markdown  gobject-api.markdown  index.markdown
docs/ges/md/: Assets.markdown  Base_Classes.markdown  GESGoals.markdown  GESLayer.markdown  GESTimeline.markdown  GStreamer_Editing_Services_Overview.markdown  Getting_started.markdown  Timeline_objects.markdown  architecture.markdown  ges-launch.markdown  index.markdown  overview.markdown
docs/libs/: .gitignore  Base_Classes.markdown  Convenience_classes.markdown  Interfaces.markdown  Serialization_Classes.markdown  ges-docs.sgml  ges-launch.xml  ges-sections.txt  ges.types  tags  tmpsections.txt  version.entities
docs/libs/md/: Assets.markdown  Track_objects.markdown  Tracks.markdown  architecture.markdown
docs/man/man1/: ges-launch-1.0-clip.html  ges-launch-1.0-clip.markdown  ges-launch-1.0-clip.txt  ges-launch-1.0-effect.txt  ges-launch-1.0-set-.txt  ges-launch-1.0.1  ges-launch-1.0.docbook  ges-launch-1.0.markdown  ges-launch-1.0.markdown_github  ges-launch-1.0.txt  ges-launch-1.0.wiki  res.html
docs/random/: scenarios
ges/: Makefile.am  ReleaseNotes.md  ges-asset.c  ges-audio-source.c  ges-audio-test-source.c  ges-audio-track.c  ges-audio-track.c.rej  ges-audio-transition.c  ges-audio-uri-source.c  ges-audio-uri-source.h  ges-auto-transition.c  ges-base-effect.c  ges-base-xml-formatter.c  ges-base-xml-formatter.c.rej  ges-base-xml-formatter.h  ges-clip-asset.c  ges-clip.c  ges-clip.h  ges-command-line-formatter.c  ges-container.c  ges-container.h  ges-custom-timeline-source.c  ges-custom-timeline-source.h  ges-effect-clip.c  ges-effect.c  ges-enums.c  ges-enums.h  ges-extractable.c  ges-extractable.c.rej  ges-formatter.c  ges-formatter.h  ges-gerror.h  ges-group.c  ges-group.h  ges-image-source.c  ges-image-source.h  ges-internal.h  ges-layer.c  ges-meta-container.c  ges-metadata-container.c  (+67 more)
gnl/: Makefile.am  gnlcomposition.c  (+4 more)
plugins/: Makefile.am  gstgessource.c
plugins/ges/: Makefile.am  gstges.c  gstgessource.c  gstgessource.h  tags
plugins/nle/: meson.build  nlecomposition.c  tags
tests/check/: Makefile.am  meson.build
tests/check/ges/: asset  backgroundsource.c  basic.c  clip.c  effects.c  filesource.c  group.c  integration.c  layer.c  mixers.c  overlays.c  pipelines.c  project.c  save_and_load.c  simplelayer.c  tags  test-utils.c  test-utils.h  text_properties.c  timelineedition.c  timelineobject.c  titles.c  transition.c  uriclip.c
tests/check/gnl/: common.h  complex.c  gnlcomposition.c  gnloperation.c  seek.c  simple.c
tests/check/nle/: complex.c  nleoperation.c  simple.c  tempochange.c
tests/check/python/: test_clip.py  test_group.py  test_timeline.py
(+134 files in other folders)
